[package]
name = "oxilangtag"
version = "0.1.3"
authors = [
    "Tpt <thomas@pellissier-tanon.fr>"
]
license = "MIT"
readme = "README.md"
keywords = ["language-tag", "BCP47"]
repository = "https://github.com/oxigraph/oxilangtag"
description = """
Simple and fast implementation of language tag normalization and validation
"""
edition = "2018"

[features]
default = []
serialize = ["serde/derive"]

[dependencies.serde]
version = "1.0"
optional = true

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "lib"
harness = false

# enable serde in docs.rs
[package.metadata.docs.rs]
all-features = true